objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Competition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if the campaign is a competition (i.e. will generally create lead nurture leads, not active leads Sales would contact).</description>
        <label>Competition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Print Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Seminars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banners/Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_channel_level_1__c</fullName>
        <description>High level source of the lead, e.g. Digital or Phone.</description>
        <label>Lead channel level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_channel_level_2__c</fullName>
        <description>Lead channel level 2 - i.e. if Digital, web or email.</description>
        <label>Lead channel level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_channel_level_3__c</fullName>
        <description>Lead channel level 3</description>
        <label>Lead channel level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Partner__c</fullName>
        <description>The sponsor partner related to the campaign</description>
        <label>Sponsor Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Penrith Panthers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St Kilda Football Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Sydney Wanderers</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Lead_channel_level_4__c</columns>
        <columns>Lead_channel_level_1__c</columns>
        <columns>Lead_channel_level_2__c</columns>
        <columns>Lead_channel_level_3__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>nkant</value>
        </filters>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>